[project]
name = "z4j-huey"
version = "1.1.2"
description = "z4j Huey queue engine adapter (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "huey", "redis", "sqlite", "task", "queue"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "z4j-core>=1.1.0,<2.0",
    "huey>=2.5,<3",
]

[project.scripts]
# 1.1.2+ console script. Both ``z4j-huey`` (pip-installed entry
# point) and ``python -m z4j_huey`` (module form) work and
# dispatch to the same code path. Engine adapters are libraries,
# so the CLI is doctor / check / status / version only - no
# ``run`` or ``restart`` (those belong to framework adapters).
z4j-huey = "z4j_huey.cli:main"

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-huey/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-huey/issues"
Source = "https://github.com/z4jdev/z4j-huey"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_huey"]
